--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
+    "react-intersection-observer": "^8.34.0",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
